Додао HtmlDecode за Дневно читање
Тако је текст снимљен у базу (Encoded) па га треба пребацити назад...

--- a/Svetosavlje/Web/Svetosavlje/Views/Home/DnevnoCitanje.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/DnevnoCitanje.cshtml
@@ -54,7 +54,7 @@
 
     @if (Model.Citanje.FullVersion != null && Model.Citanje.FullVersion!= "")
     {
-        @Html.Raw(Model.Citanje.FullVersion)
+        @Html.Raw(Server.HtmlDecode(Model.Citanje.FullVersion))
     }
 
 </div>
