--- a/Svetosavlje/Web/Svetosavlje/Views/Molitve/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Molitve/Index.cshtml
@@ -131,7 +131,8 @@
                                 <tr>
                                     <td width="20" align="right">
                                     <td width="10">&nbsp;</td>
-                                    <td><a href="http://www.svetosavlje.org/molitve/index.php?mlId=&amp;akcija=prikazi&amp;kt=">@Html.Raw(Model.Molitve[m].sNaslovMolitve)</a></td>
+                                    <td>@Html.ActionLink(Model.Molitve[m].sNaslovMolitve, "PrikazMolitve", "Molitve", new { nMolitvaId = Model.Molitve[m].nIdMolitva }, null)
+                                        </td>
                                 </tr>
                                 m = m + 1;
                             }
@@ -150,7 +151,7 @@
     <!-- / Kraj tabele grupa-kategorija molitava -->
 
     <!-- Slijedi niz tabela sa molitvama za svaku kategoriju, prikaz je samo za СВАКОДНЕВНЕ МОЛИТВЕ, iz baze (TODO) -->
-    @{int j = 0;}
+   @* @{int j = 0;}
     @foreach (Molitva molitva in Model.Molitve)
     {
         j = j + 1;
@@ -170,7 +171,7 @@
             <a href="@Html.Raw(molitva.sURLuBiblioteci)" target="_blank">@Html.Raw(molitva.sNaslovMolitve)</a>
             }
         </p>
-    }
+    }*@
 
     <table border="0" cellpadding="0" cellspacing="0" width="80%">
         <tbody>
