Did bunch of cleaning
Should be able to start framework of the new site

--- a/Svetosavlje/FrontEnd/views/footer.html
+++ b/Svetosavlje/FrontEnd/views/footer.html
@@ -1,9 +1,1 @@
-  <div class="footer">
-    <p class="floatleft"><a href="http://oceanservice.noaa.gov" target="_blank">National Ocean Service</a><br>
-      <a href="http://www.noaa.gov" target="_blank">National Oceanic and Atmospheric Administration</a><br>
-      <a href="http://www.doc.gov" target="_blank">United States Department of Commerce</a></p>
-    <p class="floatleft"><a href="http://coast.noaa.gov/PrivacyPolicy/privacyPolicy.html" target="_blank">Privacy Policy</a><br>
-      <a href="http://www.noaa.gov/disclaimer.html" target="_blank">Disclaimer</a><br>
-      <a href="http://www.usa.gov" target="_blank">USA.gov</a></p>
-    <p class="floatright"><a href="http://www.coast.noaa.gov" target="_blank"><img src="img/noaa-logo-full-color.svg" width=250/></a></p>
-  </div>
+footer.html
