Added some html for home page

--- a/Svetosavlje/FrontEnd/views/header.html
+++ b/Svetosavlje/FrontEnd/views/header.html
@@ -1,1 +1,26 @@
-header.html
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                </a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li id="home">Светосавље.орг</li>
+                        <li id="pastir">Питање пастиру</li>
+                        <li id="prolog">Пролог</li>
+                        <li id="molitve">Молитве</li>
+                        <li id="lista">Листа</li>
+                        <li id="biblioteka">Библиотека</li>
+                        <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
+                        <li><a href="http://www.svedokverni.org/" target="_blank">Мисија</a></li>
+                        <li id="pojanje">Појање</li>
+                        <li id="svetinje">Светиње</li>
+                        <li id="riznice">Ризнице</li>
+                        <li id="crkvenoslovenski">Црквенословенски језик</li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
