Prolog shows on home page

--- a/Svetosavlje/FrontEnd/views/header.html
+++ b/Svetosavlje/FrontEnd/views/header.html
@@ -10,7 +10,7 @@
                         <li id="pastir">Питање пастиру</li>
                         <li id="prolog">Пролог</li>
                         <li id="molitve">Молитве</li>
-                        <li id="lista">Листа</li>
+                        <li id="lista"><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0" target=_blank>Листа</a></li>
                         <li id="biblioteka">Библиотека</li>
                         <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
                         <li><a href="http://www.svedokverni.org/" target="_blank">Мисија</a></li>
