Ready for a designer

--- a/Svetosavlje/FrontEnd/views/header.html
+++ b/Svetosavlje/FrontEnd/views/header.html
@@ -6,18 +6,18 @@
                 </a>
                 <div class="nav-collapse">
                     <ul class="nav">
-                        <li id="home">Светосавље.орг</li>
-                        <li id="pastir">Питање пастиру</li>
-                        <li id="prolog">Пролог</li>
-                        <li id="molitve">Молитве</li>
+                        <li id="home"><a href="xxx">Светосавље.орг</a></li>
+                        <li id="pastir"><a href="xxx">Питање пастиру</a></li>
+                        <li id="prolog"><a href="xxx">Пролог</a></li>
+                        <li id="molitve"><a href="xxx">Молитве</a></li>
                         <li id="lista"><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0" target=_blank>Листа</a></li>
-                        <li id="biblioteka">Библиотека</li>
+                        <li id="biblioteka"><a href="xxx">Библиотека</a></li>
                         <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
                         <li><a href="http://www.svedokverni.org/" target="_blank">Мисија</a></li>
-                        <li id="pojanje">Појање</li>
-                        <li id="svetinje">Светиње</li>
-                        <li id="riznice">Ризнице</li>
-                        <li id="crkvenoslovenski">Црквенословенски језик</li>
+                        <li id="pojanje"><a href="xxx">Појање</a></li>
+                        <li id="svetinje"><a href="xxx">Светиње</a></li>
+                        <li id="riznice"><a href="xxx">Ризнице</a></li>
+                        <li id="crkvenoslovenski"><a href="xxx">Црквенословенски језик</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
