--- a/Svetosavlje/FrontEnd/views/HomeView.html
+++ b/Svetosavlje/FrontEnd/views/HomeView.html
@@ -104,7 +104,7 @@
 	<div class="span8">
 		<h2><a href="xxx">Питање пастиру »</a></h2>
             <ul>
-                <li ng-repeat="topic in homeModel.pitanjaPastiru"><a href="{{topic.id}}">{{topic.naslov}}</a></li>
+                <li ng-repeat="topic in homeModel.pitanjaPastiru"><a href="{{topic.ID}}">{{topic.Naslov}}</a></li>
             </ul>
 	</div>
 </div>
